--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,5 +4,41 @@ body {
    padding: 0px;
    box-sizing: border-box;
 
+   overflow-x: hidden;
+   scroll-behavior: smooth;
+
    font-family: "Montserrat";
+}
+section {
+   height: 110vh;
+   text-align: center;
+}
+
+.dark {
+   text-align: left;
+   background-color: black;
+   color: white;
+   position: relative;
+}
+img {
+   width: 50%;
+   height: 110vh;
+   position: absolute;
+   right: 0;
+   object-fit: cover;
+   top: 0;
+   z-index: 0;
+}
+
+.content {
+   z-index: 10;
+   padding: 9em 5em;
+   position: relative;
+   h2 {
+      font-size: 5em;
+      margin-bottom: 0;
+   }
+   p {
+      font-size: 1.6em;
+   }
 }
